--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "GulpBoilderplate",
+  "name": "Html5-Blank",
   "version": "0.0.0",
-  "description": "A generic gulp template",
+  "description": "Powerful shell for rapidly deploying your WordPress projects.",
   "main": "gulpfile.js",
   "dependencies": {
     "gulp": "^3.8.6"
@@ -10,9 +10,7 @@
     "gulp-changed": "^0.4.1",
     "gulp-compass": "^1.1.9",
     "gulp-concat": "^2.3.4",
-    "gulp-connect": "^2.0.6",
     "gulp-jshint": "^1.8.0",
-    "gulp-livereload": "^2.1.0",
     "gulp-plumber": "^0.6.4",
     "gulp-uglify": "^0.3.1",
     "jshint-stylish": "^0.4.0"
