--- a/package.json
+++ b/package.json
@@ -9,110 +9,32 @@
   },
   "author": "Todd Motto",
   "contributors": [
-    {
-      "name": "toddmotto",
-      "url": "https://github.com/toddmotto"
-    },
-    {
-      "name": "J-Rabe",
-      "url": "https://github.com/J-Rabe"
-    },
-    {
-      "name": "scottaohara",
-      "url": "https://github.com/scottaohara"
-    },
-    {
-      "name": "Munnday",
-      "url": "https://github.com/Munnday"
-    },
-    {
-      "name": "FreDeRoover",
-      "url": "https://github.com/FreDeRoover"
-    },
-    {
-      "name": "beat84",
-      "url": "https://github.com/beat84"
-    },
-    {
-      "name": "floq-design",
-      "url": "https://github.com/floq-design"
-    },
-    {
-      "name": "georgestephanis",
-      "url": "https://github.com/georgestephanis"
-    },
-    {
-      "name": "oriSomething",
-      "url": "https://github.com/oriSomething"
-    },
-    {
-      "name": "itsduc",
-      "url": "https://github.com/itsduc"
-    },
-    {
-      "name": "alorence",
-      "url": "https://github.com/alorence"
-    },
-    {
-      "name": "elkebirmed",
-      "url": "https://github.com/elkebirmed"
-    },
-    {
-      "name": "lregla",
-      "url": "https://github.com/lregla"
-    },
-    {
-      "name": "staceycordoni",
-      "url": "https://github.com/staceycordoni"
-    },
-    {
-      "name": "cle-ment",
-      "url": "https://github.com/cle-ment"
-    },
-    {
-      "name": "fxbenard",
-      "url": "https://github.com/fxbenard"
-    },
-    {
-      "name": "CoeusCC",
-      "url": "https://github.com/CoeusCC"
-    },
-    {
-      "name": "ssteinerx",
-      "url": "https://github.com/ssteinerx"
-    },
-    {
-      "name": "matchboxhq",
-      "url": "https://github.com/matchboxhq"
-    },
-    {
-      "name": "chrisdl",
-      "url": "https://github.com/chrisdl"
-    },
-    {
-      "name": "toxicdog",
-      "url": "https://github.com/toxicdog"
-    },
-    {
-      "name": "grischka",
-      "url": "https://github.com/grischka"
-    },
-    {
-      "name": "fanuneza",
-      "url": "https://github.com/fanuneza"
-    },
-    {
-      "name": "anthonycreek",
-      "url": "https://github.com/anthonycreek"
-    },
-    {
-      "name": "Grsmto",
-      "url": "https://github.com/Grsmto"
-    },
-    {
-      "name": "weslleih",
-      "url": "https://github.com/weslleih"
-    }
+    { "name": "toddmotto", "url": "https://github.com/toddmotto" },
+    { "name": "J-Rabe", "url": "https://github.com/J-Rabe" },
+    { "name": "scottaohara", "url": "https://github.com/scottaohara" },
+    { "name": "Munnday", "url": "https://github.com/Munnday" },
+    { "name": "FreDeRoover", "url": "https://github.com/FreDeRoover" },
+    { "name": "beat84", "url": "https://github.com/beat84" },
+    { "name": "floq-design", "url": "https://github.com/floq-design" },
+    { "name": "georgestephanis", "url": "https://github.com/georgestephanis" },
+    { "name": "oriSomething", "url": "https://github.com/oriSomething" },
+    { "name": "itsduc", "url": "https://github.com/itsduc" },
+    { "name": "alorence", "url": "https://github.com/alorence" },
+    { "name": "elkebirmed", "url": "https://github.com/elkebirmed" },
+    { "name": "lregla", "url": "https://github.com/lregla" },
+    { "name": "staceycordoni", "url": "https://github.com/staceycordoni" },
+    { "name": "cle-ment", "url": "https://github.com/cle-ment" },
+    { "name": "fxbenard", "url": "https://github.com/fxbenard" },
+    { "name": "CoeusCC", "url": "https://github.com/CoeusCC" },
+    { "name": "ssteinerx", "url": "https://github.com/ssteinerx" },
+    { "name": "matchboxhq", "url": "https://github.com/matchboxhq" },
+    { "name": "chrisdl", "url": "https://github.com/chrisdl" },
+    { "name": "toxicdog", "url": "https://github.com/toxicdog" },
+    { "name": "grischka", "url": "https://github.com/grischka" },
+    { "name": "fanuneza", "url": "https://github.com/fanuneza" },
+    { "name": "anthonycreek", "url": "https://github.com/anthonycreek" },
+    { "name": "Grsmto", "url": "https://github.com/Grsmto" },
+    { "name": "weslleih", "url": "https://github.com/weslleih" }
   ],
   "dependencies": {},
   "devDependencies": {
