config for CSS / SCSS

--- a/.editorconfig
+++ b/.editorconfig
@@ -2,6 +2,13 @@
 
 root = true
 
+[{*.css,*.scss}]
+charset = utf-8
+indent_size = 2
+indent_style = space
+trim_trailing_whitespace = true
+insert_final_newline = true
+
 [*.js]
 charset = utf-8
 indent_size = 4
