--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "gulp-livereload": "^1.2.0",
     "gulp-load-plugins": "^0.5.0",
     "gulp-sass": "^2.2.0",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-template": "^1.0.0",
     "gulp-uglify": "^1.0.0",
     "jshint-stylish": "^0.4.0"
