--- a/package.json
+++ b/package.json
@@ -116,19 +116,20 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "del": "^0.1.2",
+    "del": "^2.2.2",
     "gulp": "^3.6.0",
-    "gulp-autoprefixer": "^0.0.7",
+    "gulp-autoprefixer": "^3.1.1",
     "gulp-concat": "^2.3.4",
-    "gulp-csso": "^0.2.9",
-    "gulp-jshint": "^1.8.4",
-    "gulp-livereload": "^1.2.0",
-    "gulp-load-plugins": "^0.5.0",
+    "gulp-csso": "^2.0.0",
+    "gulp-jshint": "^2.0.4",
+    "gulp-livereload": "^3.8.1",
+    "gulp-load-plugins": "^1.4.0",
     "gulp-sass": "^2.2.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-template": "^1.0.0",
-    "gulp-uglify": "^1.0.0",
-    "jshint-stylish": "^0.4.0"
+    "gulp-sourcemaps": "^2.2.0",
+    "gulp-template": "^4.0.0",
+    "gulp-uglify": "^2.0.0",
+    "jshint": "^2.9.4",
+    "jshint-stylish": "^2.2.1"
   },
   "engines": {
     "node": ">=0.10.0"
