--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
       "url": "https://github.com/oriSomething"
     },
     {
-      "name": "itsduc",
-      "url": "https://github.com/itsduc"
+      "name": "pgerochi",
+      "url": "https://github.com/pgerochi"
     },
     {
       "name": "alorence",
@@ -115,7 +115,9 @@
     }
   ],
   "scripts": {
-    "modernizr": "gulp modernizr"
+    "modernizr": "cd node_modules/modernizr && ./bin/modernizr -c lib/config-all.json && mv ./modernizr.js ../../src/js/lib/modernizr.js",
+    "build": "webpack",
+    "start": "webpack --watch"
   },
   "dependencies": {
     "jquery": "^1.11.1",
@@ -123,22 +125,17 @@
     "normalize.css": "^7.0.0"
   },
   "devDependencies": {
-    "del": "^2.2.2",
-    "gulp": "^3.6.0",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-concat": "^2.3.4",
-    "gulp-csso": "^2.0.0",
-    "gulp-jshint": "^2.0.4",
-    "gulp-livereload": "^3.8.1",
-    "gulp-load-plugins": "^1.4.0",
-    "gulp-sass": "^2.2.0",
-    "gulp-sourcemaps": "^2.2.0",
-    "gulp-template": "^4.0.0",
-    "gulp-uglify": "^2.0.0",
-    "jshint": "^2.9.4",
-    "jshint-stylish": "^2.2.1"
-  },
-  "engines": {
-    "node": ">=0.10.0"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^1.1.5",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.1",
+    "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
+    "url-loader": "^0.6.2",
+    "webpack": "^2.7.0"
   }
 }
