chore: updated package.json to the latest version

--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
       "url": "https://github.com/oriSomething"
     },
     {
-      "name": "itsduc",
-      "url": "https://github.com/itsduc"
+      "name": "pgerochi",
+      "url": "https://github.com/pgerochi"
     },
     {
       "name": "alorence",
@@ -118,23 +118,24 @@
     "modernizr": "gulp modernizr"
   },
   "dependencies": {
-    "jquery": "^1.11.1",
     "modernizr": "^3.5.0",
-    "normalize.css": "^7.0.0"
+    "normalize.css": "^7.0.0",
+    "npm": "^5.6.0"
   },
   "devDependencies": {
-    "del": "^2.2.2",
+    "del": "^3.0.0",
     "gulp": "^3.6.0",
-    "gulp-autoprefixer": "^3.1.1",
+    "gulp-autoprefixer": "^4.1.0",
     "gulp-concat": "^2.3.4",
-    "gulp-csso": "^2.0.0",
-    "gulp-jshint": "^2.0.4",
+    "gulp-csso": "^3.0.1",
+    "gulp-jshint": "^2.1.0",
     "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^1.4.0",
-    "gulp-sass": "^2.2.0",
-    "gulp-sourcemaps": "^2.2.0",
-    "gulp-template": "^4.0.0",
-    "gulp-uglify": "^2.0.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-template": "^5.0.0",
+    "gulp-uglify": "^3.0.0",
+    "jquery": "^3.3.1",
     "jshint": "^2.9.4",
     "jshint-stylish": "^2.2.1"
   },
