--- a/package.json
+++ b/package.json
@@ -138,7 +138,8 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-template": "^5.0.0",
     "gulp-uglify": "^3.0.0",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "vinyl-ftp": "^0.6.1"
   },
   "engines": {
     "node": ">=0.10.0"
