Added automatic spinner replacement fog Gravity forms, css reset font weight for headings, some comments in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ src/modules/is-debug.php
 
 # ignore gulp generated files
 src/style.css
+#src/js/lib	
+#src/css/lib
 src/css/style.css*
 
 # ignore config files
